# foundational_ssm

./: .env.template  .gitignore  README.md  best_model.eqx  foundational_ssm.yml  foundational_ssm_env.yml  preprocessing_env.yml  pyproject.toml  setup.py  slurm-1081703.out  ssh_test.py
configs/: c.yaml  cmt.yaml  downstream.yaml  downstream_nlb.yaml  downstream_nlb_single_model.yaml  finetune.yaml  j.yaml  multi_dataset_example.yaml  nlb.yaml  nlb_sweep.yaml  nlb_transfer.yaml  nlb_transfer_sweep.yaml  pm.yaml  pm_sweep.yaml  pm_transfer.yaml  pm_transfer_sweep.yaml  possm_splits.yaml  pretrain.yaml  pretrain_notebook.yaml  pretrain_sweep_dataset_model.yaml  pretrain_sweep_train_duration.yaml  rtt.yaml  rtt_sweep.yaml  rtt_transfer.yaml  rtt_transfer_sweep.yaml  s5_maze.yaml  sweep_cmt.yaml  test_pretrain.yaml
docs/: profiling_guide.md
notebooks/: batch_info.csv  check_A_B_singular_values.ipynb  check_data_transformation.ipynb  check_dataset.ipynb  coord_check_muP.ipynb  dataset_config.yaml  debug_deserialize.ipynb  debug_lazy_loading.py  efficiency_performance_pareto.ipynb  equinox_log_parameters.ipynb  error.txt  feature_learning_metrics.ipynb  generate_h5_with_regular_smoothed.ipynb  get_and_visualise_predictions.ipynb  get_recordings_info.ipynb  get_session_model_stats.ipynb  get_trials.ipynb  job_submission.ipynb  linear_baseline.ipynb  load_jax_models_and_generate_activations.ipynb  load_wandb_jax_model.ipynb  load_wandb_jax_models_and_trajectories.ipynb  load_wandb_models_and_trajectories.ipynb  mc_rtt.ipynb  nlb_load_existing_model.ipynb  nlb_maze copy.ipynb  (+24 more)
(+2415 files in other folders)
